# aoc2025

./: Cargo.toml
.zed/: settings.json
crates/grid-derive/: Cargo.toml
crates/grid-derive/src/: lib.rs
crates/grid/src/: lib.rs
days/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs
