[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
regex = "1.11.1"
grid = { path = "crates/grid" }
grid-derive = { path = "crates/grid-derive" }

[dependencies]
regex = { workspace = true }
anyhow = "1.0.100"
grid = { workspace = true}
grid-derive = { workspace = true }

[[bin]]
name = "01"
path = "days/01.rs"

[[bin]]
name = "02"
path = "days/02.rs"

[[bin]]
name = "03"
path = "days/03.rs"

[[bin]]
name = "04"
path = "days/04.rs"

[[bin]]
name = "05"
path = "days/05.rs"

[[bin]]
name = "06"
path = "days/06.rs"

[[bin]]
name = "07"
path = "days/07.rs"

[[bin]]
name = "08"
path = "days/08.rs"

[[bin]]
name = "09"
path = "days/09.rs"
